# StockWise

./: .gitmodules  CMakeLists.txt
src/: .main.cpp.swp  main.cpp
